--- a/templates/mypage/mypage.html
+++ b/templates/mypage/mypage.html
@@ -96,8 +96,8 @@
                                             <svg aria-label="icon" color="foregrounds.neutral.secondary" fill="currentColor" height="24" role="img" width="24" viewBox="0 0 40 40"><path fill="color(display-p3 .3098 .5294 .9294)" d="M36 20.031C27.417 20.55 20.549 27.417 20.031 36h-.062C19.45 27.417 12.583 20.549 4 20.031v-.062C12.583 19.45 19.451 12.583 19.969 4h.062C20.55 12.583 27.417 19.451 36 19.969z"></path></svg>
                                         </div>
                                         <div class="user-content-ai-text-div">
-                                            <p class="user-content-career-summary-word">AI 커리어 요약</p>
-                                            <p class="user-content-career-summary-bottom">아직 닉네임님에 대한 커리어 정보가 부족해 요약할 수 없습니다. 정보가 더 입력되면 커리어 요약을 표시할 수 있습니다.</p>
+                                            <p class="user-content-curry-summary-word">AI 커리어 요약</p>
+                                            <p class="user-content-curry-summary-bottom">아직 닉네임님에 대한 커리어 정보가 부족해 요약할 수 없습니다. 정보가 더 입력되면 커리어 요약을 표시할 수 있습니다.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -142,7 +142,7 @@
                                 <div class="user-content-activity-word-wrap">
                                     <div class="user-content-activity-word">
                                         <div class="activity-word-wrap">
-                                            <p class="activity-word">활동</p>
+                                            <p class="activity-word">활동 내역</p>
                                         </div>
                                     </div>
                                 </div>
@@ -188,7 +188,7 @@
                         <div class="profile-setting-inner">
                             <div class="profile-setting">
                                 <div class="profile-setting-div">
-                                    <p class="profile-setting-word">프로필 설정</p>
+                                    <p class="profile-setting-word">개인정보 설정</p>
                                 </div>
                             </div>
                         </div>
@@ -196,8 +196,20 @@
                     <div class="profile-setting-content">
                         <div class="profile-setting-content-div">
                             <div class="profile-setting-content-first">
-                                <span class="job-change-word">구직 및 이직</span>
-                                <p class="intention-word">의향 있음</p>
+                                <span class="job-change-word">개인정보 설정</span>
+                                <!-- <p class="intention-word">의향 있음</p> -->
+                            </div>
+                            <div class="profile-setting-button-wrap">
+                                <div class="profile-setting-button-inner">
+                                    <svg class="profile-setting-button-svg" color="foregrounds.neutral.tertiary" fill="currentColor" height="24" role="img" width="24" class="profile-quick-setting-list" style="cursor:pointer" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M9.434 6.434a.8.8 0 0 1 1.132 0l5 5a.8.8 0 0 1 0 1.132l-5 5a.8.8 0 1 1-1.132-1.132L13.87 12 9.434 7.566a.8.8 0 0 1 0-1.132" clip-rule="evenodd"></path></svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="profile-setting-content">
+                        <div class="profile-setting-content-div">
+                            <div class="profile-setting-content-first">
+                                <span class="job-change-word">1:1 문의</span>
                             </div>
                             <div class="profile-setting-button-wrap">
                                 <div class="profile-setting-button-inner">
@@ -212,7 +224,7 @@
                         <div class="library-inner">
                             <div class="library-in">
                                 <div class="library-div">
-                                    <p class="library-word">라이브러리</p>
+                                    <p class="library-word">뱃지</p>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +268,7 @@
                             </div>
                         </div>
                         <div class="library-content-div">
-                            <p class="library-content-word1">라이브러리를 채워보세요.</p>
+                            <p class="library-content-word1">뱃지를 채워보세요.</p>
                             <p class="library-content-word2">나를 더 잘 소개할 수 있는 파일/URL을 등록하세요.
 공고에 빠르게 지원하거나, 다른 기업으로부터 제안을 받아볼 수도 있습니다.</p>
                         </div>
